# risk-engine-lab

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: __init__.py  demo.py  ui_check.py
src/risk_engine_lab/: __init__.py  engine.py  limits.py
tests/: test_demo.py  test_risk_limits.py
